--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "deploy": "vite deploy",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
@@ -31,6 +32,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-plugin-github-pages": "^0.0.0-alpha.0",
     "vitest": "^2.0.5"
   },
   "jest": {
